--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
-.App {
-  text-align: center;
+#website-logo {
+  font-size: 2em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-link {
+  border-bottom: 1px solid transparent;
+  transition: 0.5s;
+  font-size: 1.6em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.nav-link:hover {
+  border-bottom: 1px solid #f2f2f2;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+@media only screen and (max-width: 1100px) and (min-width: 768px) {
+  #navbar-row {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Carousel Styles */
+.carousel {
+  width: 100%;
+}
+
+#carousel-pic {
+  height: 625px;
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.carousel-caption > .c-link > #welcome {
+  font-size: 5px;
+}
+
+.carousel-text {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+}
+
+.c-link {
+  color: white;
+  text-decoration: none;
+}
+
+.c-link:hover {
+  text-decoration: none;
+  /* font-weight: bold; */
+  text-decoration: underline;
+  text-decoration-color: white;
+}
+
+.welcomeImg {
+  object-position: 13% 12%;
+}
+
+@media only screen and (min-width: 768px) {
+  #welcome {
+    width: 35%;
   }
-  to {
-    transform: rotate(360deg);
+  #bbVsBtn {
+    width: 70%;
+  }
+}
+
+/* Quote Styles */
+#quote-wrapper h5 {
+  font-family: vollkorn;
+  letter-spacing: 2px;
+  font-size: 1.75em;
+}
+
+#quote-wrapper h6 {
+  font-family: vollkorn;
+  font-size: 1em;
+}
+
+/* Footer Styles */
+
+#socialMediaIconsWrapper > a {
+  padding: 10px 15px;
+  font-size: 1.5rem;
+  color: #cbcbcb;
+  transition: 0.5s;
+}
+
+#socialMediaIconsWrapper > a:hover {
+  color: #cea135;
+  cursor: pointer;
+}
+
+/* Blog */
+.blog-images {
+  width: 100%;
+  height: 30rem;
+  object-fit: cover;
+}
+
+@media only screen and (max-width: 991px) {
+  .blog-images {
+    height: 20rem;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .blog-images {
+    height: 20rem;
+    object-position: 10% 0%;
+  }
+
+  .card-container {
+    padding-bottom: 40px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  #waterfall-img {
+    height: 20rem;
+    object-position: 50% 65%;
+  }
+}
+
+/* About Me Styles */
+#content-wrapper > .left-image {
+  width: 350px;
+  margin: 23px 40px 20px 0px;
+  float: left;
+  border: 1px solid #404040;
+}
+
+#content-wrapper > .right-image {
+  width: 350px;
+  margin: 23px 40px 20px 0px;
+  float: right;
+  border: 1px solid #404040;
+}
+
+#content-wrapper p {
+  font-size: 18px;
+  letter-spacing: 1px;
+  line-height: 30px;
+}
+
+@media only screen and (max-width: 767px) {
+  #content-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  #content-wrapper img {
+    align-self: center;
   }
 }
