--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* Navbar Styles */
 #website-logo {
   font-size: 2em;
 }
@@ -6,7 +7,7 @@
   border-bottom: 1px solid transparent;
   transition: 0.5s;
   font-size: 1.6em;
-}
+} 
 
 .nav-link:hover {
   border-bottom: 1px solid #f2f2f2;
